# jobscoutai

./: .dockerignore  .gitignore  AGENTS.md  APPLY_WORKSPACE.md  DEPLOY.md  FEATURES_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  PADDLE_SETUP.md  README.md  fly.toml  pyproject.toml  render.yaml  requirements.txt  test_github_workflow.ps1  test_github_workflow.sh  vercel.json
.cursor/agents/: api-contract-guardian.md  auth-auditor.md  cost-guardrails.md  db-migration-auditor.md  deploy-safety.md  frontend-qa.md  verifier.md
.cursor/plans/: add_multiple_job_scraping_sources_9afe137a.plan.md  agentic_accuracy_upgrade_ba65cdec.plan.md  apply_workspace_integration_8762cd3a.plan.md  end-to-end_runner_5d33852d.plan.md  jobscoutai_success_plan_b27b63e4.plan.md  ph-ready_web_product_d67a0523.plan.md  pricing+creditsmodel_v2_9c084e16.plan.md  repo_structure_cleanup_06edb7d9.plan.md  stabilize_scraping_&_ux_f8a7d532.plan.md  upgrade-jobscoutai-low-cost_cf93a0ca.plan.md
.github/workflows/: scrape.yml
backend/: Dockerfile  env.sample  requirements.txt
backend/app/: __init__.py  main.py  worker.py
backend/scripts/: debug_settings_diag.py
docs/: SMOKE_TEST.md  second_brain.md  second_brain_deploy_and_test.md
extension/: README.md  background.js  manifest.json
extension/popup/: popup.css  popup.html  popup.js
frontend/: env.sample  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/components/: AnalyticsProvider.tsx  Filters.tsx  (+10 more)
jobscout/: __init__.py  __main__.py  cli.py  dedupe.py  models.py  orchestrator.py  scoring.py
scripts/: README.md  deploy-frontend.ps1  inspect_docx.py  metrics_query.sql  smoke_api.py  smoke_api.sh
(+154 files in other folders)
