[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobscout"
version = "2.0.0"
description = "AI-powered job aggregator for remote work opportunities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["jobs", "remote", "automation", "ai", "aggregator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.8",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "pandas>=1.5",
    "openpyxl>=3.0",
    "rapidfuzz>=3.0",
    "tldextract>=3.4",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
ai = [
    "openai>=1.0",
]
discovery = [
    "duckduckgo_search>=4.0",
]
all = [
    "jobscout[browser,ai,discovery]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[project.scripts]
jobscout = "jobscout.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/jobscout"
Documentation = "https://github.com/yourusername/jobscout#readme"
Repository = "https://github.com/yourusername/jobscout"

[tool.setuptools.packages.find]
where = ["."]
include = ["jobscout*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]
